# pangu

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  DEPLOY.md  Dockerfile  README.md  README_EN.md  ROADMAP_V2.md  benchmark.py  docker-compose.yml  env.example  mkdocs.yml  pangu.spec  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements.txt  run_iteration.sh  start_api.sh  start_pangu.sh  start_pangu_bg.sh  start_redirect.py  start_server.py  stop_pangu.sh  test_extract.py  test_full.py
.github/: labeler.yml  release-drafter.yml
deploy/: prometheus-alerts.yml  prometheus.yml
docs/: api-cli.md  api-mcp.md  api-reference.md  api-rest.md  architecture.md  auth.md  configuration.md  deployment.md  getting-started.md  index.md  observability.md  security.md  troubleshooting.md  v3-technical-documentation-en.md  v3-technical-documentation.md
monitoring/: alerts.yml  prometheus.yml
pangu/: __init__.py  autonomous.py  cli.py  client.py  task_tracker.py
reports/: OPTIMIZATION_PLAN.md  ROADMAP.md  ROUND2_TEST_OPTIMIZATION.md  TEST_REPORT.md
scripts/: auto_collect.sh  auto_extract.py  bench_large_scale.py  build-multiarch.sh  consolidate.py  dump_llm_cache.py  e2e_warmup.py  embed_all.py  fast_collect.py  lifecycle_maintain.sh  osv_audit.py  phase3_enhance.py  split_mcp_server.py  test_real_llm.py
tests/: __init__.py  conftest.py  manual_api_smoke.py  manual_perf.py  manual_security.py  run_full_regression.py  test_abac.py  test_auth.py  test_bench.py  test_benchmark_v2.py  test_benchmark_v3.py  test_boundary_cases.py  test_cache_warmup.py  test_core.py  test_e2e_rbac_abac.py  test_encryption.py  test_fuxi_port.py  test_ingestion.py  test_integration.py  test_llm_optimizations.py  test_llm_providers.py  test_mcp_warmup.py  test_memory_system.py  test_onnx_embedder.py  test_perf_regression.py  test_persistent_cache.py  test_rbac.py  test_real_llm.py  test_top_level_intelligence.py  test_vacuum.py  (+10 more)
(+229 files in other folders)
