[project]
name = "pangu"
version = "1.0.0"
description = "盘古 — LMM+Wiki 超智能记忆系统"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "numpy>=1.24.0",
    "onnxruntime>=1.16.0",
    "tokenizers>=0.15.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "jinja2>=3.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.18",
    "markdown>=3.6.0",
    "pyyaml>=6.0",
    "watchfiles>=0.21.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
    "aiofiles>=23.0.0",
    "requests>=2.28.0",
    "python-dotenv>=1.0.0",
    "prometheus-client>=0.19.0",
    "pyjwt>=2.8.0",
    "bcrypt>=4.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-benchmark>=4.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "respx>=0.21.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]

[project.scripts]
pangu = "pangu.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pangu"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# 手动测试脚本允许 import 在前置日志之后（UX 友好）
"tests/manual_api_smoke.py" = ["E402"]
"tests/manual_perf.py" = ["E402", "E701", "E702", "I001"]
"tests/manual_security.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: 真实 LLM 集成测试（需要 API key）",
    "slow: 慢速测试",
    "benchmark: 性能基准测试",
]